--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,13 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <!-- INICIO DE SCRIPTS DE FIREBASE -->
+  <!-- Estas son las librerías que le faltaban a tu proyecto -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database.js"></script>
+  <!-- FIN DE SCRIPTS DE FIREBASE -->
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
